WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83744
It is incorrect to short-circuit Branch(LogicalNot(@a)) if boolean speculations on @a may fail
https://bugs.webkit.org/show_bug.cgi?id=83744
Summary
It is incorrect to short-circuit Branch(LogicalNot(@a)) if boolean speculatio...
Filip Pizlo
Reported
2012-04-11 20:55:46 PDT
Since that would mean that the branch will OSR exit to a bytecode branch that expects the LogicalNot to already have been performed. <
rdar://problem/11206946
>
Attachments
the patch
(2.27 KB, patch)
2012-04-11 20:57 PDT
,
Filip Pizlo
aestes
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-04-11 20:57:18 PDT
Created
attachment 136821
[details]
the patch
Filip Pizlo
Comment 2
2012-04-11 21:19:34 PDT
Landed in
http://trac.webkit.org/changeset/113941
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug