It is incorrect to short-circuit Branch(LogicalNot(@a)) if boolean speculations on @a may fail https://bugs.webkit.org/show_bug.cgi?id=83744 <rdar://problem/11206946>

Source/JavaScriptCore:

Reviewed by Andy Estes.

This does the conservative thing: it only short-circuits Branch(LogicalNot(@a)) if @a is a node
that is statically known to return boolean results.

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupNode):

LayoutTests:

Rubber stamped by Andy Estes.

* fast/js/dfg-branch-not-fail-expected.txt: Added.
* fast/js/dfg-branch-not-fail.html: Added.
* fast/js/script-tests/dfg-branch-not-fail.js: Added.
(foo):
(bar):



Canonical link: https://commits.webkit.org/101236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113941 268f45cc-cd09-0410-ab3c-d52691b4dbfc